--- a/index.css
+++ b/index.css
@@ -1,3 +1,45 @@
-#heading{
-    color:red;
+.header {
+  display: flex;
+  justify-content: space-between;
+  border: 1px solid black;
+}
+
+.logo {
+  width: 200px;
+}
+
+.nav-items > ul {
+  font-size: 24px;
+  display: flex;
+  list-style-type: none;
+  padding: 0px 20px;
+}
+
+.nav-items > ul > li {
+  padding: 10px;
+  margin: 10px;
+}
+.search {
+  margin: 10px;
+  padding: 10px;
+}
+.restro-card {
+  padding: 5px;
+  width: 200px;
+  height: 350px;
+  /* border: 1px solid black; */
+}
+
+.restro-card:hover {
+  cursor: pointer;
+  border: 1px solid black;
+}
+
+.restro-img {
+  width: 100%;
+}
+.restro-container {
+  display: flex;
+  flex-wrap: wrap;
+  margin: 5px;
 }
