--- a/index.css
+++ b/index.css
@@ -44,3 +44,18 @@
   flex-wrap: wrap;
   margin: 5px;
 }
+
+
+.shimmer-conatiner{
+  display: flex;
+  flex-wrap: wrap;
+  
+}
+
+.shimmer-card{
+  width: 150px;
+  height: 300px;
+  background-color: #f0f0f0;
+  margin: 20px;
+  
+}
