--- a/index.css
+++ b/index.css
@@ -1,4 +1,8 @@
-.header {
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
+/* .header {
   display: flex;
   justify-content: space-between;
   border: 1px solid black;
@@ -29,7 +33,7 @@
   margin: 10px;
   /* height: 350px; */
   /* border: 1px solid black; */
-}
+/* }
 
 .restro-card:hover {
   cursor: pointer;
@@ -70,4 +74,4 @@
 .user-card{
   padding: 10px;
   border: 1px solid black;
-}
+} */ 
